--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,22 +1,81 @@
 <!DOCTYPE html>
 <html>
-<head><title>Smart AI Agent</title></head>
+<head>
+  <title>Smart AI Agent</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 2rem;
+      background-color: #f9f9f9;
+    }
+    h1 {
+      margin-bottom: 0;
+    }
+    h2 {
+      font-size: 1rem;
+      font-weight: normal;
+      color: #666;
+      margin-top: 0.3rem;
+      margin-bottom: 2rem;
+    }
+    input {
+      width: 600px;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      padding: 12px 20px;
+      font-size: 16px;
+      margin-left: 10px;
+      cursor: pointer;
+    }
+    pre {
+      width: 600px;
+      background: #f4f4f4;
+      padding: 1rem;
+      margin-top: 2rem;
+      border-radius: 6px;
+      min-height: 350px;
+      white-space: pre-wrap;
+      line-height: 1.5;
+    }
+  </style>
+</head>
 <body>
 <h1>Smart AI Agent UI</h1>
-<input type='text' id='command' placeholder='Type a command...'/>
+<h2>Tech Stack: HTML + JS → Flask API → Claude (Anthropic) → JSON → UI Response</h2>
+<input type='text' id='command' placeholder='Type a command...' />
 <button onclick='sendCommand()'>Send</button>
 <pre id='response'></pre>
+
 <script>
 function sendCommand() {
   const cmd = document.getElementById('command').value;
+  document.getElementById('response').textContent = 'Sending...';
+
   fetch('https://smart-ai-agent.onrender.com/execute', {
     method: 'POST',
     headers: {'Content-Type': 'application/json'},
     body: JSON.stringify({ text: cmd })
   })
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById('response').textContent = data.response;
+  .then(async res => {
+    const contentType = res.headers.get("Content-Type");
+    const raw = await res.text();
+    try {
+      if (contentType && contentType.includes("application/json")) {
+        const data = JSON.parse(raw);
+        document.getElementById('response').textContent = data.response || JSON.stringify(data);
+      } else {
+        throw new Error("Non-JSON response: " + raw);
+      }
+    } catch (err) {
+      document.getElementById('response').textContent = '⚠️ JSON parse error: ' + err.message + '\nRaw response: ' + raw;
+    }
+  })
+  .catch(err => {
+    document.getElementById('response').textContent = '❌ Fetch failed: ' + err.message;
   });
 }
 </script>
