--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,99 +1,105 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart AI Agent UI</title>
+  <title>Smart AI Agent</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: #f5f7fa;
+      background-color: #f4f6f8;
       margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 40px;
+      text-align: center;
     }
+
     h1 {
-      font-size: 2rem;
-      color: #1a202c;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
+
     h2 {
       font-size: 1rem;
-      color: #4a5568;
+      font-weight: normal;
+      color: #666;
+      margin-top: 0;
       margin-bottom: 2rem;
     }
-    input {
-      width: 500px;
-      padding: 12px;
-      font-size: 16px;
-      border: 1px solid #cbd5e0;
-      border-radius: 6px;
-      margin-right: 10px;
+
+    #command {
+      width: 60%;
+      max-width: 600px;
+      padding: 14px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
     }
+
     button {
-      padding: 12px 20px;
-      font-size: 16px;
-      background-color: #3182ce;
+      padding: 14px 24px;
+      font-size: 1rem;
+      margin-left: 10px;
+      background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
     }
+
     button:hover {
-      background-color: #2b6cb0;
+      background-color: #0056b3;
     }
+
     pre {
-      margin-top: 2rem;
+      text-align: left;
       width: 80%;
-      max-width: 700px;
+      max-width: 800px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
       min-height: 200px;
-      padding: 1rem;
-      background-color: #edf2f7;
-      border: 1px solid #e2e8f0;
-      border-radius: 6px;
-      font-family: monospace;
+      font-size: 0.95rem;
+      line-height: 1.5;
       white-space: pre-wrap;
-      word-break: break-word;
+      border: 1px solid #ddd;
     }
   </style>
 </head>
 <body>
   <h1>Smart AI Agent UI</h1>
   <h2>Tech Stack: HTML + JS → Flask API → Claude (Anthropic) → CMP Logic</h2>
-  <div>
-    <input type="text" id="command" placeholder="What would you like the agent to do?" />
-    <button onclick="sendCommand()">Send</button>
-  </div>
+
+  <input type="text" id="command" placeholder="What would you like the agent to do?" />
+  <button onclick="sendCommand()">Send</button>
+
   <pre id="response">Claude API response will appear here...</pre>
 
   <script>
     function sendCommand() {
-      const input = document.getElementById("command");
-      const responseBox = document.getElementById("response");
-      const payload = { text: input.value };
+      const cmd = document.getElementById('command').value;
+      document.getElementById('response').textContent = '⏳ Sending to Claude...';
 
-      responseBox.textContent = "Loading...";
-
-      fetch("/execute", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
+      fetch('/execute', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ text: cmd })
       })
       .then(async res => {
+        const contentType = res.headers.get("Content-Type");
         const raw = await res.text();
         try {
-          const json = JSON.parse(raw);
-          responseBox.textContent = JSON.stringify(json, null, 2);
-        } catch {
-          responseBox.textContent = "⚠️ Error parsing response:
-
-" + raw;
+          if (contentType && contentType.includes("application/json")) {
+            const data = JSON.parse(raw);
+            document.getElementById('response').textContent = JSON.stringify(data.claude_output || data, null, 2);
+          } else {
+            throw new Error("Non-JSON response: " + raw);
+          }
+        } catch (err) {
+          document.getElementById('response').textContent = '⚠️ JSON parse error: ' + err.message + '\nRaw response: ' + raw;
         }
       })
       .catch(err => {
-        responseBox.textContent = "❌ Fetch error: " + err.message;
+        document.getElementById('response').textContent = '❌ Fetch failed: ' + err.message;
       });
     }
   </script>
